--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,8 @@
 1.3.2
+- Added code to check if PivotTables to be created for imported data would collide with an Excel object already in the importing worksheet, if so a dialog to import the
+  data and the PivotTables into another worksheet will be shown. Also enhanced the way stored procedure result sets are laid out on a worksheet when all of them are
+  imported horizontally or vertically and PivotTables are created for each result set, instead of just skipping one row or column, the necessary rows and columns are
+  skipped so the created PivotTables for the result sets do not collide with each other.
 - Changed every 'Session' reference in the application to 'Connection Information' to make the reference to these objects more accurate and less confusing.
 - Removed saving step that created invalid connection information entries in the settings.config file even when the user chose not to save the workbook.
   (MySQL Bug #73319, Bug #19242130 - INVALID CONNECTION INFORMATION IS SAVED WITHOUT THE USER SAVING THE WORKBOOK)
