--- a/source/Panels/SchemaSelectionPanel.resx
+++ b/source/Panels/SchemaSelectionPanel.resx
@@ -124,57 +124,116 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACm
-        CwAAAk1TRnQBSQFMAwEBAAGAAQEBgAEBARgBAAEYAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABYAMA
-        ARgDAAEBAQABIAYAASQ2AAMBBAIEAwEEAwUBBwMFAQcDBAEFAwMBBAMDAQQDAQEC/wBRAAMBAQIDBgEI
-        AwoEDgETAxEBFwMUARsDFgEfAxYBHgMUARsDEQEXAw4BEwMLAQ8DBwEJAwIBA/8ARQADBAEFAxUBHQMo
-        ATwBPwJAAW4BTQJOAZYBUwJVAbABXAJeAc4BWgJeAdgBVQJXAboBUgJTAagBRQJGAX8DOQFfAyUBNwMd
-        ASkDDwEUAwYBCAMBAQL/ADkAAwUBBwE1AjYBWAFdAmEB4gEnAaQBxQH/AVYBtgHOAf8BjgHJAdwB/wGX
-        AdAB4gH/AYcBywHgAf8BYgHHAd0B/wFRAcIB2wH/ATwBuQHXAf8BIQGkAcUB/wELAYwBsQH/ASkBbwF+
-        AfoDUQGiAygBPQMUARsDBgEI/wA5AANBAXIBIwGuAdAB/wGHAdYB6wH/AdgB+AL/AfUD/wHvAf0C/wHe
-        AfkC/wHIAfQC/wGuAfAB/gH/AZUB6gH9Af8BawHmAf0B/wFYAeQB/QH/AVQB4wL/AW0B2gHyAf8BRgGp
-        AccB/wFbAl4B0AIrASwBQwMJAQz/ADkAAUEBhQGNAfkBgAHeAfcB/wGyAfIC/wHSAfUC/wHsAfsC/wHp
-        AfoB/gH/AdoB9wH+Af8BxAHyAf0B/wGrAe4B/AH/AZIB6AH7Af8BaAHjAfsB/wFUAd8B+gH/AU0B3QH6
-        Af8BmAHsAv8BvQHwAf4B/wEsAbEB2wH/A0cBgwMGAQj/ADkAAUEBhwGOAfkBkAHqAv8BrAHuAv8B0gH1
-        Av8B7AH7Av8B6QH6Af4B/wHaAfcB/gH/AcQB8gH9Af8BqwHuAfwB/wGSAegB+wH/AWgB4wH7Af8BVAHf
-        AfoB/wFNAd0B+gH/AZIB6AH8Af8BxAH3Av8BPgHBAewB/wNHAYMDBgEI/wA5AAFRAYQBiQH3AY0B6AL/
-        AawB7gL/AdIB9QL/AewB+wL/AekB+gH+Af8B3QH5Av8ByAH0Av8BrgHwAf4B/wGVAeoB/QH/AWkB5AH8
-        Af8BVAHfAfoB/wFNAd0B+gH/AZIB6AH8Af8BwgH1Av8BPAHBAesB/wNHAYIDBgEI/wA5AAFRAYQBiQH3
-        AY0B6AL/Aa4B7wL/Ad0B+wb/AfwD/wHXAfUB/AH/AbcB6gH3Af8BoQHnAfcB/wGJAeIB9gH/AW0B6AL/
-        AV4B6QL/AVQB5QL/AZYB7AL/AcIB9QL/ATwBwQHsAf8DRgGBAwUBB/8AOQABSQGEAZkB+gGVAe4C/wGl
-        AeoB/AH/AYMBzQHhAf8BSAGzAc4B/wEwAaYBwwH/ATUBqAHEAf8BOAGpAcYB/wEvAaYBxAH/ASEBnwG+
-        Af8BDgGRAbQB/wELAZEBtQH/ARgBowHGAf8BaAHRAegB/wHOAf4C/wFBAcQB7gH/A0UBfwMCAQP/ADkA
-        AVoCXgHYATUBugHaAf8BMgGzAdEB/wFmAccB3gH/AaoB2wHpAf8BsgHeAeoB/wGsAd4B7AH/AaAB3QHt
-        Af8BjAHZAesB/wFkAdIB6QH/AUoBxwHjAf8BOQHDAeAB/wEoAbMB0wH/ASIBnQG+Af8BKAGXAbYB/wEr
-        AX8BpwH+Az8BbQMDAQT/ADkAAVgCWwHLATsBvgHdAf8BmQHjAfYB/wHLAfIB/AH/AfAB/QL/AfID/wHh
-        AfsC/wHJAfUC/wGwAfEC/wGWAesB/gH/AWwB5wH+Af8BVwHjAf0B/wFMAdwB+QH/AYcB4AH1Af8BaAHB
-        AdkB/wE1AYABigH5Az0BaQMHAQn/ADkAAUwBbwF0AfMBiAHkAf0B/wGuAe8C/wHTAfYC/wHsAfsC/wHp
-        AfoB/gH/AdoB9wH+Af8BxAHyAf0B/wGrAe4B/AH/AZIB6AH7Af8BaAHjAfsB/wFUAd8B+gH/AU0B3QH6
-        Af8BlQHqAf0B/wHAAfMC/wE1AbsB5gH/A0YBgAMGAQj/ADkAAVEBhQGKAfcBjQHoAv8BrAHuAv8B0gH1
-        Av8B7AH7Av8B6QH6Af4B/wHaAfcB/gH/AcQB8gH9Af8BqwHuAfwB/wGSAegB+wH/AWgB4wH7Af8BVAHf
-        AfoB/wFNAd0B+gH/AZIB6AH8Af8BwgH1Av8BOwHDAe4B/wNHAYIDBgEI/wA5AAFRAYUBigH3AYwB6AL/
-        AawB7gL/AdQB9gL/AfEB/QL/AfAB/QL/AeEB+gL/AcoB9QL/AbAB8QH+Af8BlgHrAf0B/wFsAeYB/gH/
-        AVcB4gH8Af8BTgHeAfsB/wGSAegB/AH/AcIB9QL/ATwBxAHuAf8DRwGCAwYBCP8AOQABUQGFAYoB9wGO
-        AekC/wGyAfEC/wHPAfQB/gH/AdEB7gH2Af8BwAHnAfEB/wGvAeIB7wH/AZ0B3QHuAf8BiQHZAewB/wFj
-        AdMB6gH/AU0BzgHqAf8BPwHNAeoB/wFFAdYB9AH/AZcB7AL/AckB+QL/ATwBxAHvAf8DRwGCAwYBCP8A
-        OQABUQGGAYwB9wGEAeQB/AH/AYMB2QHwAf8BkAHYAesB/wGEAdAB5AH/AWUBygHhAf8BXAHFAd0B/wFY
-        AcIB3AH/AVYBwAHaAf8BUQG9AdgB/wFEAbkB1wH/ATsBtgHWAf8BMwG5AdoB/wFUAcYB4AH/AZ8B3wHw
-        Af8BPgHGAfAB/wNHAYIDBgEI/wA5AAFRAYUBigH3AVQBzwHrAf8BZwHQAegB/wGIAdYB7QH/AakB5gH4
-        Af8BvwHxAv8BwwHzAv8BwgHzAv8BuwHwAv8BswHuAv8BqgHrAv8BlQHiAf0B/wFcAcsB6wH/AUoBugHa
-        Af8BUAG7AdsB/wEfAa4B2QH/A0cBggMGAQj/ADkAAUQBigGQAfkBmQHfAfIB/wHCAfEC/wHAAfEC/wG7
-        Ae4B/gH/AbkB7QH9Af8BtwHtAf0B/wGwAesB/QH/AagB6AH9Af8BngHkAf0B/wGRAeEB/QH/AY0B4AH+
-        Af8BlgHkAv8BqQHsAv8BpQHkAfgB/wE9AbkB3QH/A0YBgAMCAQP/ADkAATUBvwHfAf8BxgHyAv8BugHu
-        Af0B/wG4Ae0B/QH/AbkB7QH9Af8BuAHtAf0B/wGxAesB/QH/AagB6AH9Af8BnQHkAf0B/wGUAeEB/QH/
-        AZIB4QH+Af8BnAHiAf4B/wGpAecB/gH/AbcB6wL/AdkB/AL/AYQB1gHyAf8DRAF6/wA9AAFFAkYBfwFa
-        AcwB5gH/AbQB6wH7Af8BwQHxAv8BuwHuAf4B/wGzAewB/gH/AakB6AH9Af8BngHlAf0B/wGVAeEB/QH/
-        AZQB4gH+Af8BnQHkAv8BqQHnAv8BvAHuAv8BywHyAv8BmAHSAecB/wNbAcgDGgEk/wA9AAMEAQYDMgFR
-        AVgBZQFoAe8BUwHIAeMB/wGIAdcB7gH/AZEB3QH0Af8BlAHfAfgB/wGVAeIB/gH/AZQB4gL/AZIB4AH9
-        Af8BhwHXAfMB/wGEAdIB7AH/AVkBwAHcAf8BMQGuAdEB/wNQAZoDEQEX/wBJAAMNARIDFgEeATwCPQFn
-        AVQCVgGrAVkCXAHMA18B4AFYAl8B4wFbAmAB1gFWAlcBuANKAYwDJAE1AxABFQMGAQj/AP8AtgABQgFN
-        AT4HAAE+AwABKAMAAWADAAEYAwABAQEAAQEFAAEgAQEWAAP/AQAB/wGAAT8JAAH8AQABDwkAAfgBAAED
-        CQAB8AEAAQMJAAHwAQABAwkAAfABAAEDCQAB8AEAAQMJAAHwAQABAwkAAfABAAEDCQAB8AEAAQMJAAHw
-        AQABAwkAAfABAAEDCQAB8AEAAQMJAAHwAQABAwkAAfABAAEDCQAB8AEAAQMJAAHwAQABAwkAAfABAAED
-        CQAB8AEAAQMJAAHwAQABBwkAAfABAAEHCQAB8AEAAQ8JAAH8AQABHwkAA/8JAAs=
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAB6
+        GQAAAk1TRnQBSQFMAgEBAgEAAdgBAQHYAQEBGAEAARgBAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFg
+        AwABGAMAAQEBAAEgBgABJDYAAwEEAgQDAQQDBQEHAwUBBwMEAQUDAwEEAwMBBAMBAQIrAAEBAwUBBwMQ
+        ARUDLAFEAzgBXQE+Aj8BbANAAXADQgF0A0IBdgNCAXYBQQJCAXMDQAFwAzsBZQMxAU8DGQEjAxEBFwMJ
+        AQwDAgED4AADAQECAwYBCAMKBA4BEwMRARcDFAEbAxYBHwMWAR4DFAEbAxEBFwMOARMDCwEPAwcBCQMC
+        AQMfAAEBAxEBFwNEAXoBVgFXAVkBuAFRAWkBdgHhAUoBhAGVAfMBSwGeAbkB/AFWAa0BvgH9AVMBrgHI
+        Af8BSQGqAcYB/wFAAaYBxAH/AUABpgG7Af0BKwGIAbEB/AE0AXgBjgH0AU0BZAFvAeIBVAJYAbwBSAJJ
+        AYcDIgEyAxABFQMDAQTYAAMEAQUDFQEdAygBPAE/AkABbgFNAk4BlgFTAlUBsAFcAl4BzgFaAl4B2AFV
+        AlcBugFSAlMBqAFFAkYBfwM5AV8DJQE3Ax0BKQMPARQDBgEIAwEBAhQAAwUBBwFWAV4BYQHHASIBnQG/
+        Af8BbQHGAd0B/wHSAfEB+gH/AeoB+wL/AecB+gL/AdoB9wH+Af8ByAHzAf0B/wGzAe8B/QH/AZ0B6wH8
+        Af8BhwHmAfsB/wFuAeIB+wH/AWAB3wH6Af8BUwHVAfMB/wFDAa4BzQH/AREBdAGeAf8BVwFdAWAByAMh
+        ATADDQESAwEBAtAAAwUBBwE1AjYBWAFdAmEB4gEcAaQBxQH/AUsBtgHOAf8BjgHJAdwB/wGXAdAB4gH/
+        AYcBywHgAf8BVwHHAd0B/wFGAcIB2wH/ATEBuQHXAf8BFgGkAcUB/wEAAYwBsQH/ASkBYgFzAfoDUQGi
+        AygBPQMUARsDBgEIFAABUwFVAVYBsAE6AbAB0QH/AZMB4gH3Af8BvwHyAv8B3gH4Av8B6gH7Av8B5wH6
+        Av8B2gH3Af4B/wHIAfMB/QH/AbMB7wH9Af8BnQHrAfwB/wGHAeYB+wH/AW4B4gH7Af8BYAHfAfoB/wFZ
+        Ad0B+gH/AYMB5QH8Af8BpQHgAfEB/wE0AZUBtwH/AVUBWAFZAbcDFgEeAwMBBNAAA0EBcgEYAa4B0AH/
+        AYcB1gHrAf8B2AH4Av8B9QP/Ae8B/QL/Ad4B+QL/AcgB9AL/Aa4B8AH+Af8BlQHqAf0B/wFgAeYB/QH/
+        AU0B5AH9Af8BSQHjAv8BYgHaAfIB/wE7AakBxwH/AVsCXgHQAisBLAFDAwkBDBQAASEBlAGrAfsBcgHa
+        AfYB/wGhAesC/wG/AfIC/wHeAfgC/wHqAfsC/wHnAfoC/wHaAfcB/gH/AcgB8wH9Af8BswHvAf0B/wGd
+        AesB/AH/AYcB5gH7Af8BbgHiAfsB/wFgAd8B+gH/AVkB3QH6Af8BgwHlAfwB/wG7Ae8B/gH/AXQBzwHv
+        Af8BHAFqAY0B+QMYASIDBAEF0AABQQFxAYIB+QGAAd4B9wH/AbIB8gL/AdIB9QL/AewB+wL/AekB+gH+
+        Af8B2gH3Af4B/wHEAfIB/QH/AasB7gH8Af8BkgHoAfsB/wFdAeMB+wH/AUkB3wH6Af8BQgHdAfoB/wGY
+        AewC/wG9AfAB/gH/ASEBsQHbAf8DRwGDAwYBCBQAASgBnwG7Af0BhwHlAv8BoQHrAv8BvwHyAv8B3gH4
+        Av8B6gH7Av8B5wH6Av8B2gH3Af4B/wHIAfMB/QH/AbMB7wH9Af8BnQHrAfwB/wGHAeYB+wH/AW4B4gH7
+        Af8BYAHfAfoB/wFZAd0B+gH/AYMB5QH8Af8BuwHvAf4B/wGJAd8B/gH/AQ4BbwGKAfwDGAEiAwQBBdAA
+        AUEBdwGDAfkBkAHqAv8BrAHuAv8B0gH1Av8B7AH7Av8B6QH6Af4B/wHaAfcB/gH/AcQB8gH9Af8BqwHu
+        AfwB/wGSAegB+wH/AV0B4wH7Af8BSQHfAfoB/wFCAd0B+gH/AZIB6AH8Af8BxAH3Av8BMwHBAewB/wNH
+        AYMDBgEIFAABKAGgAbsB/QGHAeUC/wGhAesC/wG/AfIC/wHeAfgC/wHqAfsC/wHnAfoC/wHaAfcB/gH/
+        AcgB8wH9Af8BswHvAf0B/wGdAesB/AH/AYcB5gH7Af8BbgHiAfsB/wFgAd8B+gH/AVkB3QH6Af8BgwHl
+        AfwB/wG7Ae8B/gH/AYkB3wH+Af8BDgFwAYsB/AMYASIDBAEF0AABUQFuAX0B9wGNAegC/wGsAe4C/wHS
+        AfUC/wHsAfsC/wHpAfoB/gH/Ad0B+QL/AcgB9AL/Aa4B8AH+Af8BlQHqAf0B/wFeAeQB/AH/AUkB3wH6
+        Af8BQgHdAfoB/wGSAegB/AH/AcIB9QL/ATEBwQHrAf8DRwGCAwYBCBQAASkBoQG7Af0BhwHlAv8BoQHr
+        Av8BvwHyAv8B3gH4Av8B6gH7Av8B5wH6Av8B2gH3Af4B/wHIAfMB/QH/AbMB7wH9Af8BnQHrAfwB/wGH
+        AeYB+wH/AW4B4gH7Af8BYAHfAfoB/wFZAd0B+gH/AYMB5QH8Af8BuwHvAf4B/wGJAd8B/gH/AQ8BcQGM
+        AfwDGAEiAwQBBdAAAVEBbgF9AfcBjQHoAv8BrgHvAv8B3QH7Bv8B/AP/AdcB9QH8Af8BtwHqAfcB/wGh
+        AecB9wH/AYkB4gH2Af8BYgHoAv8BUwHpAv8BSQHlAv8BlgHsAv8BwgH1Av8BMQHBAewB/wNGAYEDBQEH
+        FAABKQGiAbsB/QGHAeUC/wGhAesC/wG/AfIC/wHTAfMB/AH/AbIB4AHsAf8BiQHKAd0B/wFcAbYB0AH/
+        AVMBswHNAf8BSgGvAcsB/wFAAasByQH/ATYBqAHHAf8BPwG1AdQB/wFIAcYB4wH/AVUB2QH2Af8BgwHl
+        AfwB/wG7Ae8B/gH/AYkB3wH+Af8BDwFxAYwB/AMXASADAwEE0AABTQF1AXwB+gGVAe4C/wGlAeoB/AH/
+        AYMBzQHhAf8BPQGzAc4B/wElAaYBwwH/ASoBqAHEAf8BLQGpAcYB/wEkAaYBxAH/ARYBnwG+Af8BAwGR
+        AbQB/wEAAZEBtQH/AQ0BowHGAf8BXQHRAegB/wHOAf4C/wE2AcQB7gH/A0UBfwMCAQMUAAE8AYQBmQHy
+        AWQB0QHvAf8BYwHLAeUB/wFQAboB1QH/AUkBsgHOAf8BWgG3AdAB/wFxAcIB2AH/AYABxwHbAf8BeQHJ
+        Ad4B/wFsAcUB3AH/AV0BwQHaAf8BSQG3AdQB/wE1AawBzAH/ASABmwG+Af8BFwGSAbYB/wEsAZ0BvwH/
+        AWkBvAHVAf8BXAG9Ad8B/wE0AW8BhQHxAxIBGQMCAQPQAAFaAl4B2AEqAboB2gH/AScBswHRAf8BWwHH
+        Ad4B/wGqAdsB6QH/AbIB3gHqAf8BrAHeAewB/wGgAd0B7QH/AYwB2QHrAf8BWQHSAekB/wE/AccB4wH/
+        AS4BwwHgAf8BHQGzAdMB/wEXAZ0BvgH/AR0BlwG2Af8BKwF/AZEB/gM/AW0DAwEEFAABSwJMAZABKwGs
+        Ac4B/wFYAcQB3wH/AZoB3gHwAf8BzQHvAfkB/wHnAfkB/gH/AecB+gL/AdoB9wH+Af8ByAHzAf0B/wGz
+        Ae8B/QH/AZ0B6wH8Af8BhwHmAfsB/wFuAeIB+wH/AV8B3QH5Af8BUAHTAfEB/wFfAcsB5QH/AVABrAHI
+        Af8BEwGCAagB/wFNAk4BlgMSARkDAgED0AABWAJbAcsBMAG+Ad0B/wGZAeMB9gH/AcsB8gH8Af8B8AH9
+        Av8B8gP/AeEB+wL/AckB9QL/AbAB8QL/AZYB6wH+Af8BYQHnAf4B/wFMAeMB/QH/AUEB3AH5Af8BhwHg
+        AfUB/wFdAcEB2QH/AUEBagF/AfkDPQFpAwcBCRQAAU4BdAF/AeQBVQHIAeUB/wGgAesC/wG/AfIC/wHe
+        AfgC/wHqAfsC/wHnAfoC/wHaAfcB/gH/AcgB8wH9Af8BswHvAf0B/wGdAesB/AH/AYcB5gH7Af8BbgHi
+        AfsB/wFgAd8B+gH/AVkB3QH6Af8BgwHlAfwB/wG6Ae4B/gH/AU4BrgHNAf8BSQFpAXQB5AMXASADAwEE
+        0AABTAFfAWQB8wGIAeQB/QH/Aa4B7wL/AdMB9gL/AewB+wL/AekB+gH+Af8B2gH3Af4B/wHEAfIB/QH/
+        AasB7gH8Af8BkgHoAfsB/wFdAeMB+wH/AUkB3wH6Af8BQgHdAfoB/wGVAeoB/QH/AcAB8wL/ASoBuwHm
+        Af8DRgGAAwYBCBQAAS0BqAG+Af0BggHiAfwB/wGhAesC/wG/AfIC/wHeAfgC/wHqAfsC/wHnAfoC/wHa
+        AfcB/gH/AcgB8wH9Af8BswHvAf0B/wGdAesB/AH/AYcB5gH7Af8BbgHiAfsB/wFgAd8B+gH/AVkB3QH6
+        Af8BgwHlAfwB/wG7Ae8B/gH/AYAB1wH2Af8BDAF1AZAB/AMYASIDBAEF0AABUQFxAX8B9wGNAegC/wGs
+        Ae4C/wHSAfUC/wHsAfsC/wHpAfoB/gH/AdoB9wH+Af8BxAHyAf0B/wGrAe4B/AH/AZIB6AH7Af8BXQHj
+        AfsB/wFJAd8B+gH/AUIB3QH6Af8BkgHoAfwB/wHCAfUC/wEwAcMB7gH/A0cBggMGAQgUAAExAagBwAH9
+        AYcB5QL/AaEB6wL/Ab8B8gL/Ad4B+AL/AeoB+wL/AecB+gL/AdoB9wH+Af8ByAHzAf0B/wGzAe8B/QH/
+        AZ0B6wH8Af8BhwHmAfsB/wFuAeIB+wH/AWAB3wH6Af8BWQHdAfoB/wGDAeUB/AH/AbsB7wH+Af8BhQHb
+        AfoB/wENAXUBkAH8AxgBIgMEAQXQAAFRAXEBfwH3AYwB6AL/AawB7gL/AdQB9gL/AfEB/QL/AfAB/QL/
+        AeEB+gL/AcoB9QL/AbAB8QH+Af8BlgHrAf0B/wFhAeYB/gH/AUwB4gH8Af8BQwHeAfsB/wGSAegB/AH/
+        AcIB9QL/ATEBxAHuAf8DRwGCAwYBCBQAATIBqQHBAf0BhwHlAv8BoQHrAv8BvwHyAv8B3gH4Av8B6gH7
+        Av8B5wH6Av8B2gH3Af4B/wHIAfMB/QH/AbMB7wH9Af8BnQHrAfwB/wGHAeYB+wH/AW4B4gH7Af8BYAHf
+        AfoB/wFZAd0B+gH/AYMB5QH8Af8BuwHvAf4B/wGFAdsB+gH/AQ0BdgGRAfwDGAEiAwQBBdAAAVEBcQF/
+        AfcBjgHpAv8BsgHxAv8BzwH0Af4B/wHRAe4B9gH/AcAB5wHxAf8BrwHiAe8B/wGdAd0B7gH/AYkB2QHs
+        Af8BWAHTAeoB/wFCAc4B6gH/ATQBzQHqAf8BOgHWAfQB/wGXAewC/wHJAfkC/wExAcQB7wH/A0cBggMG
+        AQgUAAEyAaoBwQH9AYcB5QL/AaEB6wL/Ab8B8gL/Ad4B+AL/AeoB+wL/AeAB9wH9Af8BzAHwAfkB/wGz
+        AegB9QH/AZ0B4gHzAf8BjAHgAfMB/wF4Ad8B9gH/AWsB3wH4Af8BYAHfAfoB/wFZAd0B+gH/AYMB5QH8
+        Af8BuwHvAf4B/wGFAdsB+gH/AQ0BdwGRAfwDGAEiAwQBBdAAAVEBdAGAAfcBhAHkAfwB/wGDAdkB8AH/
+        AZAB2AHrAf8BhAHQAeQB/wFaAcoB4QH/AVEBxQHdAf8BTQHCAdwB/wFLAcAB2gH/AUYBvQHYAf8BOQG5
+        AdcB/wEwAbYB1gH/ASgBuQHaAf8BSQHGAeAB/wGfAd8B8AH/ATMBxgHwAf8DRwGCAwYBCBQAATMBqwHD
+        Af0BhwHlAv8BoQHrAv8BsAHrAfoB/wGZAdkB6gH/AXABxwHdAf8BZwHDAdsB/wFvAccB3wH/AWUBwwHb
+        Af8BbwHIAeAB/wFYAb0B2AH/AVEBuwHXAf8BOwGwAc8B/wEvAa0BzQH/AToBvQHdAf8BcgHcAfQB/wG7
+        Ae8B/gH/AYUB2wH6Af8BDgF4AZMB/AMYASIDBAEF0AABUQFxAX8B9wFJAc8B6wH/AVwB0AHoAf8BiAHW
+        Ae0B/wGpAeYB+AH/Ab8B8QL/AcMB8wL/AcIB8wL/AbsB8AL/AbMB7gL/AaoB6wL/AZUB4gH9Af8BUQHL
+        AesB/wE/AboB2gH/AUUBuwHbAf8BFAGuAdkB/wNHAYIDBgEIFAABMwGsAcMB/QF1Ad8B+gH/AUcBwAHf
+        Af8BRwG7AdgB/wGAAdIB6gH/Aa4B6AH6Af8BuAHtAf0B/wG4Ae0B/QH/AbgB7QH9Af8BtQHsAf0B/wGu
+        AeoB/QH/AaUB5wH9Af8BnAHkAf0B/wGKAdwB+QH/AVQBvQHfAf8BIwGZAb8B/wFCAaYBxAH/AW0B0AHx
+        Af8BDgF5AZMB/AMYASIDBAEF0AABRAF/AYQB+QGZAd8B8gH/AcIB8QL/AcAB8QL/AbsB7gH+Af8BuQHt
+        Af0B/wG3Ae0B/QH/AbAB6wH9Af8BqAHoAf0B/wGeAeQB/QH/AZEB4QH9Af8BjQHgAf4B/wGWAeQC/wGp
+        AewC/wGlAeQB+AH/ATIBuQHdAf8DRgGAAwIBAxQAATIBrQHEAf0BVQHHAeQB/wGRAdwB8QH/AbgB7QH9
+        Af8BuAHtAf0B/wG4Ae0B/QH/AbgB7QH9Af8BuAHtAf0B/wG1AewB/QH/Aa4B6gH9Af8BpwHnAf0B/wGd
+        AeQB/QH/AZMB4QH9Af8BiAHdAf4B/wF5AdsB/gH/AXYB2gH+Af8BYgHEAecB/wE7AacBygH/AQ4BeAGT
+        AfwDGAEiAwQBBdAAASoBvwHfAf8BxgHyAv8BugHuAf0B/wG4Ae0B/QH/AbkB7QH9Af8BuAHtAf0B/wGx
+        AesB/QH/AagB6AH9Af8BnQHkAf0B/wGUAeEB/QH/AZIB4QH+Af8BnAHiAf4B/wGpAecB/gH/AbcB6wL/
+        AdkB/AL/AYQB1gHyAf8DRAF6GAABLAGnAckB/gGkAeUB9wH/AbgB7QH9Af8BuAHtAf0B/wG4Ae0B/QH/
+        AbgB7QH9Af8BuAHtAf0B/wG1AewB/QH/AbAB6gH9Af8BpwHoAf0B/wGeAeUB/QH/AZQB4gH+Af8BiQHe
+        Af4B/wGEAdwB/gH/AYkB3QH+Af8BlwHiAf4B/wGpAeYB/gH/AaMB3gH0Af8BDQF/AZsB/gMVAR0DAgED
+        0AABRQJGAX8BTwHMAeYB/wG0AesB+wH/AcEB8QL/AbsB7gH+Af8BswHsAf4B/wGpAegB/QH/AZ4B5QH9
+        Af8BlQHhAf0B/wGUAeIB/gH/AZ0B5AL/AakB5wL/AbwB7gL/AcsB8gL/AZgB0gHnAf8DWwHIAxoBJBgA
+        ATcBoAG3AfkBqwHoAfkB/wG4Ae0B/QH/AbgB7QH9Af8BuAHtAf0B/wG4Ae0B/QH/AbYB7AH9Af8BsAHq
+        Af0B/wGoAegB/QH/AZ8B5QH9Af8BlgHiAf0B/wGRAeAB/gH/AY8B3wH+Af8BlgHhAf4B/wGjAeUB/gH/
+        AbQB6gL/AcYB7wL/AcMB6gH6Af8BHwF5AZYB+AMLAQ8DAAEB0AADBAEGAzIBUQFYAmIB7wFIAcgB4wH/
+        AYgB1wHuAf8BkQHdAfQB/wGUAd8B+AH/AZUB4gH+Af8BlAHiAv8BkgHgAf0B/wGHAdcB8wH/AYQB0gHs
+        Af8BTgHAAdwB/wEmAa4B0QH/A1ABmgMRARccAAMyAVABWgF6AYIB5AGYAeAB9AH/AbYB7AH8Af8BuAHt
+        Af0B/wG2Ae0B/QH/AbEB6wH9Af8BqQHoAf0B/wGgAeYB/QH/AZsB5AH9Af8BlwHiAf0B/wGWAeIB/gH/
+        AZcB4QH+Af8BnwHkAf4B/wGtAegB/gH/AbwB6wH+Af8BowHZAewB/wFYAXABewHjAzIBUQMDAQTcAAMN
+        ARIDFgEeATwCPQFnAVQCVgGrAVkCXAHMA18B4AFYAl8B4wFbAmAB1gFWAlcBuANKAYwDJAE1AxABFQMG
+        AQgkAAMqAUEBVgJZAbgBVQG3AdQB/gFvAdAB6AH/AZAB2wHxAf8BowHlAfoB/wGhAeYB/QH/AZkB4wH9
+        Af8BlQHhAf4B/wGSAeEB/gH/AZIB4AH+Af8BjwHcAfsB/wF2Ac8B7AH/AV0BvAHaAf8BRwGdAb0B/gFW
+        AVcBWQG4AyoBQQMBAQL/AEUAA0oBigFSAXIBewHhASMBlwG5AfsBJgGTAbkB/AEnAagBywH/ASwBqQHM
+        Af8BIgGiAcUB/wEeAYYBsAH8ASEBjwGiAfsBUQFoAXEB3ANIAYQDAwEEAwABAdAAAUIBTQE+BwABPgMA
+        ASgDAAFgAwABGAMAAQEBAAEBBQABIAEBFgAD/wEAAf8BgAE/AfABAAEDBgAB/AEAAQ8B4AEAAQEGAAH4
+        AQABAwHgCAAB8AEAAQMB4AgAAfABAAEDAeAIAAHwAQABAwHgCAAB8AEAAQMB4AgAAfABAAEDAeAIAAHw
+        AQABAwHgCAAB8AEAAQMB4AgAAfABAAEDAeAIAAHwAQABAwHgCAAB8AEAAQMB4AgAAfABAAEDAeAIAAHw
+        AQABAwHgCAAB8AEAAQMB4AgAAfABAAEDAeAIAAHwAQABAwHgCAAB8AEAAQMB4AgAAfABAAEHAeAIAAHw
+        AQABBwHgCAAB8AEAAQ8B4AEAAQEGAAH8AQABHwHwAQABAwYAA/8B/gEAAQ8GAAs=
 </value>
   </data>
   <metadata name="BackButton.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -219,7 +278,7 @@
   <metadata name="MainLogoPictureBox.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="$this.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>35</value>
   </metadata>
 </root>
