--- a/source/Properties/Resources.resx
+++ b/source/Properties/Resources.resx
@@ -1039,4 +1039,10 @@ What do you want to do with them?</value>
   <data name="ImportConnectionInfoRemovedConnectionText" xml:space="preserve">
     <value>Connection information for Excel table '{0}.{1}.{2}' on was removed since the connection no longer exists.</value>
   </data>
+  <data name="MySQLforExcel_SchemaPanel_ListItem_Schema_32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\MySQLforExcel-SchemaPanel-ListItem-Schema-32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="MySQLforExcel_SchemaPanel_SchemaInspect_32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\MySQLforExcel-SchemaPanel-SchemaInspect-32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
