MYSQLEXCEL-25 - Include in multiple import tables related to related ones
- Created the ListViewColumnSorter class needed to sort a ListView by a specific column. (source\Classes\ListViewColumnSorter.cs, source\MySQL.ForExcel.csproj)
- Added a new context-menu option called "Add Related Tables" available only when right-clicking a table already present in the Related Tables list view. Created the AddRelatedTablesToRelatedTablesListView method to find the related tables of a specific DbTable and add them to the RelatedTablesListView.  Added the ListViewColumnClick event to sort the ListView items alphabetically when clicking any of its column headers, this is used along with the new ListViewColumnSorter class. (source\Forms\ImportMultipleDialog.cs, source\Forms\ImportMultipleDialog.Designer.cs, source\Forms\ImportMultipleDialog.resx)
- Moved the GetOwnerListViewControl method to the MiscUtilities class and added the GetSelectedDbTableOrView methods to extract common logic that was in the ImportMultipleDialog class before and make it globally available. (source\Classes\MiscUtilities.cs)

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 1.3.2
+- Added a new context-menu option called "Add Related Tables" available only when right-clicking a table already present in the Related Tables list view. When this new
+  option is clicked, all tables related to the right-clicked table one that have not been already included in the Related Tables list view will be added to it. These
+  tables are unchecked (i.e. not selected for import) by default so they can be reviewed first and included manually.
 - Corrected the logic that rules the Append Data action label to make it work correctly so that it is enabled in every case you are able to append data to a table.
   (MySQL Bug #73267, Bug #19190638 - APPEND DATA ACTION LABEL BECOMES UNAVAILABLE WHEN CHANGING DB OBJECT NODES)
 - Added a new option to the context-menu of the schemas list (opened by right-clicking it) to display the default schema collation below their names, the option is
