- Bumped the Excel version to 1.3.2. (source\Properties\AssemblyInfo.cs) - Fixed the position of the "Add Summary Fields" checkbox that was incorrectly aligned with other controls (because it was growing when the Font automatically changed). (source\Forms\ImportMultipleDialog.Designer.cs, source\Forms\ImportMultipleDialog.resx) - Display errors related to Excel relationships creation in word-wrap mode. (source\Forms\ImportMultipleDialog.cs) - Added a comma to the error text of Excel relationships creation due a possible circular reference, because the phrase is too long. (source\Properties\Resources.Designer.cs, source\Properties\Resources.resx)

--- a/source/Properties/Resources.resx
+++ b/source/Properties/Resources.resx
@@ -1022,7 +1022,7 @@ What do you want to do with them?</value>
     <value>A Model Table was not found for one or both tables in the relationship.</value>
   </data>
   <data name="PossibleCircularReferenceError" xml:space="preserve">
-    <value>A possible circular reference among tables already related in the Excel Model may be created so Excel can't create the Model Relationship.</value>
+    <value>A possible circular reference among already related tables in the Excel Model may be created, so Excel can't create the Model Relationship.</value>
   </data>
   <data name="ExcelRelationshipsCreationErrorDetail" xml:space="preserve">
     <value>Some Excel Model Relationships could not be created because errors were found.</value>
