MYSQLEXCEL-42 - Refreshing procedure imported data results in an error
- Changed code in the ImportData method to always place PivotTables to the right of the imported data. This is to workaround a possible bug in VSTO where the last result set imported horizontally would not refresh since Excel can't accept the binding if there is a PivotTable anywhere below the Excel table. (source\Classes\DbProcedure..cs)
- Change code in the GetNextResultSetTopLeftCell method to accommodate for the fact that PivotTables are now created always to the right of imported result sets. (source\Classes\ExcelUtilities.cs)
- Added code to the Refresh method to consider the summary row when resizing the Excel range of an Excel table, also added the message of an InnerException (if any) to any displayed error since it contains useful information for users in case the refresh throws an error. (source\Classes\ImportConnectionInfo.cs)

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 1.3.2
+- Changed the placement of PivotTables for stored procedure result sets imported into Excel with an horizontal alignment, before these were placed below the imported
+  data, now they are placed to the right of the data to avoid an error with refreshing the Excel tables tied to the PivotTables.
 - Added a new context-menu option called "Add Related Tables" available only when right-clicking a table already present in the Related Tables list view. When this new
   option is clicked, all tables related to the right-clicked table one that have not been already included in the Related Tables list view will be added to it. These
   tables are unchecked (i.e. not selected for import) by default so they can be reviewed first and included manually.
