--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 1.3.2
+- Removed the reference to "views" wherever relationships are mentioned, since relationships only concern tables, not views.
+  (MySQL Bug #73398, Bug #19296989 - CHANGE SOME TEXT REFERENCES REGARDING VIEWS RELATED TO IMPORT MULTIPLE OPERATION)
 - Changed the placement of PivotTables for stored procedure result sets imported into Excel with an horizontal alignment, before these were placed below the imported
   data, now they are placed to the right of the data to avoid an error with refreshing the Excel tables tied to the PivotTables.
 - Added a new context-menu option called "Add Related Tables" available only when right-clicking a table already present in the Related Tables list view. When this new
