MYSQLEXCEL-44 - Create Pivot table 4 all tables in data model should be disabled in Excel <2013
- Added logic to only let the creation of a single PivotTable for the whole data model to be selectable when Excel relationships are being created and if and only if the Excel version is 2013 or higher, this happens by setting and enabling/disabling the "Create a PivotTable" drop-down depending on the value of both "Create a PivotTable" and "Create Excel relationships" checkboxes. (source\Forms\ImportMultipleDialog.Designer.cs, source\Forms\ImportMultipleDialog.cs, source\Forms\ImportMultipleDialog.resx)
- Added a resource string to show more information about the disabled "Create Excel relationships" checkbox that also explains that affects the creation of a single PivotTable for the whole Excel data model. (source\Properties\Resources.Designer.cs, source\Properties\Resources.resx)

--- a/source/Properties/Resources.resx
+++ b/source/Properties/Resources.resx
@@ -1045,4 +1045,9 @@ What do you want to do with them?</value>
   <data name="MySQLforExcel_SchemaPanel_SchemaInspect_32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\MySQLforExcel-SchemaPanel-SchemaInspect-32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ImportMultipleSinglePivotTableNotSupportedText" xml:space="preserve">
+    <value>The PivotTable type drop-down has been disabled to only allow the creation of PivotTables for each imported table or view.
+
+Since Excel relationships cannot be created, a single PivotTable for the whole Excel data model cannot be created. This is because this type of PivotTable requires that the model tables are related among each other.</value>
+  </data>
 </root>
