--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 1.3.2
+- Added logic to only let the creation of a single PivotTable for the whole data model to be selectable when Excel relationships are being created and if and only if
+  the Excel version is 2013 or higher.
 - Fixed code that was always attempting to create Excel relationships even when the option for that was not set by users.
   (MySQL Bug #73402, Bug #19299550 - EXCEL RELATIONSHIPS CREATED EVEN IF THE OPTION FOR THAT IS UNCHECKED)
 - Removed the reference to "views" wherever relationships are mentioned, since relationships only concern tables, not views.
