--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 1.3.2
+- Fixed the logic that calculates the resulting mapped data to be appended to an existing MySQL table, this was failing in scenarios where the selected Excel data has
+  more columns than the mapped columns to be inserted to the MySQL table. (MySQL Bug #73453, Bug #19346203 - APPEND NOT WORKING WHEN +1 COLUMN IS SELECTED)
 - Added logic to only let the creation of a single PivotTable for the whole data model to be selectable when Excel relationships are being created and if and only if
   the Excel version is 2013 or higher.
 - Fixed code that was always attempting to create Excel relationships even when the option for that was not set by users.
