Bug #19347634 - EDITING NOT POSSIBLE MESSAGE AFTER WORK OFFLINE
- Moved the ShowOpenEditConnectionInfosDialog call from the GetOrCreateActiveCustomPane method to the ExcelAddInPaneFirstRun one so the dialog is shown when MySQL for Excel is opened and not every time the user switches focus from one pane to another. Fixed code in the Application_WorkbookAfterSave method to add an Edit Session connection information to the serialized collection only if it is not already there. Enhanced code in the Application_WorkbookBeforeClose method to show the Excel's "Save As" dialog when a workbook that has not been saved is being closed, doing a better handling of close & save scenarios. (source\ThisAddIn.cs)
- Added text to the NewSchemaOperationSuccessSummaryText resource string that contained no text, probably a leftover error. (source\Properties\Resources.Designer.cs, source\Properties\Resources.resx)

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 1.3.2
+- Fixed code that was saving duplicate Edit Session connection information into the settings.config file, causing the same Edit Session to be attempted to be restored
+  more than once which caused the "Editing not possible" error message to be displayed. Also added code to show the Excel's "Save As" dialog when a workbook that has
+  not been saved is being closed, doing a better handling of close & save scenarios. (Bug #19347634 - EDITING NOT POSSIBLE MESSAGE AFTER WORK OFFLINE)
 - Fixed the logic that calculates the resulting mapped data to be appended to an existing MySQL table, this was failing in scenarios where the selected Excel data has
   more columns than the mapped columns to be inserted to the MySQL table. (MySQL Bug #73453, Bug #19346203 - APPEND NOT WORKING WHEN +1 COLUMN IS SELECTED)
 - Added logic to only let the creation of a single PivotTable for the whole data model to be selectable when Excel relationships are being created and if and only if
