--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 1.3.2
+- Added code to remove the internationalization formulas used by MySQL for Excel stored in Workbook Names before the Workbook is saved, and they are added back again
+  after the save operation. (MySQL Bug #73467, Bug #19358961 - WARNING ABOUT MACRO-FREE WORKBOOKS WHEN CLOSING & SAVING AN EXCEL WORKBOOK)
 - Fixed code that was saving duplicate Edit Session connection information into the settings.config file, causing the same Edit Session to be attempted to be restored
   more than once which caused the "Editing not possible" error message to be displayed. Also added code to show the Excel's "Save As" dialog when a workbook that has
   not been saved is being closed, doing a better handling of close & save scenarios. (Bug #19347634 - EDITING NOT POSSIBLE MESSAGE AFTER WORK OFFLINE)
