--- a/source/Properties/Resources.resx
+++ b/source/Properties/Resources.resx
@@ -1050,4 +1050,10 @@ What do you want to do with them?</value>
 
 Since Excel relationships cannot be created, a single PivotTable for the whole Excel data model cannot be created. This is because this type of PivotTable requires that the model tables are related among each other.</value>
   </data>
+  <data name="WorkbookSaveErrorFinalText" xml:space="preserve">
+    <value>The Excel workbook can't be saved due to several errors, you can file a bug report about this.</value>
+  </data>
+  <data name="WorkbookSaveErrorText" xml:space="preserve">
+    <value>There was an error saving the Excel workbook, please try again.</value>
+  </data>
 </root>
